--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,1 +1,65 @@
+body {
+	background-image: url(https://source.unsplash.com/1600x900/?christmas);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	height: 100vh;
+	color: #ffffff;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	position: relative;
 
+	&::after {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba($color: #000000, $alpha: 0.5);
+	}
+
+	& * {
+		z-index: 1;
+	}
+
+	h1 {
+		@include fluid-typo(375px, 1920px, 45px, 60px);
+		margin: -80px 0 40px;
+	}
+
+	.countdown {
+		display: flex;
+		transform: scale(2);
+	}
+
+	.time {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		margin: 15px;
+
+		h2 {
+			margin: 0 0 5px;
+		}
+	}
+
+	@include breakpoint-max(500) {
+		.time {
+			margin: 5px;
+
+			h2 {
+				font-size: 12px;
+				margin: 0;
+			}
+
+			small {
+				font-size: 10px;
+			}
+		}
+	}
+}
