--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,5 +1,5 @@
 body {
-	background-image: url(https://source.unsplash.com/1600x900/?christmas);
+	background-image: url('https://source.unsplash.com/collection/778914/christmas-traditions');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
