--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -31,6 +31,15 @@ body {
 		margin: -80px 0 40px;
 	}
 
+	.year {
+		@include fluid-typo(375px, 1920px, 100px, 200px);
+		z-index: -1;
+		position: absolute;
+		bottom: 0;
+		left: 50%;
+		transform: translateX(-50%);
+	}
+
 	.countdown {
 		display: flex;
 		transform: scale(2);
