--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -33,7 +33,7 @@ body {
 
 	.year {
 		@include fluid-typo(375px, 1920px, 100px, 200px);
-		z-index: -1;
+		opacity: 0.7;
 		position: absolute;
 		bottom: 0;
 		left: 50%;
@@ -41,7 +41,7 @@ body {
 	}
 
 	.countdown {
-		display: flex;
+		display: none;
 		transform: scale(2);
 	}
 
@@ -54,6 +54,11 @@ body {
 
 		h2 {
 			margin: 0 0 5px;
+			@include fluid-typo(375px, 1920px, 10px, 20px);
+		}
+
+		small {
+			@include fluid-typo(375px, 1920px, 10px, 20px);
 		}
 	}
 
@@ -62,12 +67,7 @@ body {
 			margin: 5px;
 
 			h2 {
-				font-size: 12px;
 				margin: 0;
-			}
-
-			small {
-				font-size: 10px;
 			}
 		}
 	}
