--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -3,7 +3,7 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
-	height: 100vh;
+	height: 100%;
 	color: #ffffff;
 	display: flex;
 	flex-direction: column;
